gccida/g3/dump_edge_info
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dump_edge_info/src/cfg.c:1026:16: error: use of undeclared identifier 'off_698152'
fprintf( file, off_698152, ( unsigned int)dest->index); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dump_edge_info/src/cfg.c:1055:17: error: use of undeclared identifier 'off_698152'
fprintf( file, &off_698152[1], ( unsigned int)v7++); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dump_edge_info/src/cfg.c:1065:10: error: use of undeclared identifier 'bitnames_8'
v10 = ( &bitnames_8)[v7++]; 
         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/dump_edge_info/src/obj/cfg.o] Error 1
